# GBA-Again

./: CMakeLists.txt  README.md  notes.md
anim_test/: Makefile  anim_test.elf  anim_test.gba
anim_test/images/: santa.c  santa.h  santa_jump.c  santa_jump.h
anim_test/source/: anim_test.c
bgscroll_test/: Makefile  bgscroll_test.elf  bgscroll_test.gba
bgscroll_test/images/: fnaf_button_ab.c  fnaf_button_ab.h  fnaf_button_ab_apower.c  fnaf_button_ab_apower.h  fnaf_office.c  fnaf_office.h  santa_4tile.c  santa_4tile.h  santa_full.c  santa_full.h
bgscroll_test/source/: bgscroll_test.c
first/: Makefile
first/source/: first.c  first.elf  first.gba
keys/: Makefile  key_demo.elf  key_demo.gba
keys/source/: key_demo.c
multiple_code_files/: multiple_code_files.elf  multiple_code_files.gba
multiple_code_files/source/: main.c  other.c
music_test/: music_test.elf  music_test.gba
music_test/maxmod_data/: Deep_Freeze_BGM1.mod
music_test/source/: MaxModExample.c
my_obj_test/: Makefile  my_obj_test.elf  my_obj_test.gba
my_obj_test/include/: memdef.h
my_obj_test/source/: my_obj_test.c
obj_demo/: Makefile  obj_demo.elf  obj_demo.gba
obj_demo/source/: obj_demo.c
second/: Makefile
second/include/: toolbox.h
second/source/: second.c  second.elf  second.gba
